fixed alignment

--- a/webDev_2017/colmarAcademy/styles/style.css
+++ b/webDev_2017/colmarAcademy/styles/style.css
@@ -78,6 +78,7 @@ h3 {
   background-color: #D8D8D8;
   color: #4A4A4A;
   padding: 4rem 3rem;
+  align-items: center;
 }
 
 #learn .image {
